# haruno

./: .commitlintrc.yaml  .gitignore  .lefthook.toml  .pre-commit-config.yaml  .treefmt.toml  LICENSE  README.md  flake.nix  install.sh  library.sh  repl.nix  shell.nix
.github/: FUNDING.yml
.github/workflows/: build.yaml  build.yml  check.yaml  flake-checker.yaml
flake/: default.nix  dev-shell.nix  pre-commit.nix  shell.nix  treefmt.nix
flake/checks/: default.nix
flake/devShells/: default.nix
flake/partitions/: default.nix
flake/partitions/development/: flake-module.nix  flake.nix
flake/shells/: default.nix  development.nix
flake/templates/: default.nix
flake/templates/flake/: .commitlintrc.yaml  README.md  flake.nix
flake/templates/flake/flake/: checks.nix  devShells.nix
flake/templates/python-uv/: .commitlintrc.yaml  .envrc
flake/templates/python-uv/src/: main.py
flake/templates/rust/: .commitlintrc.yaml  README.md  flake.nix
flake/templates/typescript-bun/: README.md  flake.nix  package.json
flake/templates/typescript-deno/: biome.json  flake.nix
scripts/: install.sh  library.sh  switch.sh
templates/python-uv/: .gitignore  README.md  flake.nix  pyproject.toml
templates/rust/: .gitignore  flake.nix
templates/typescript/: README.md  package.json  tsconfig.json
templates/typescript-bun/: .commitlintrc.yaml  .gitignore  flake.nix  package.json
templates/typescript-deno/: .commitlintrc.yaml  README.md  deno.json  flake.nix
templates/typescript-deno/src/: index.ts
