[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "TeamWolfyta" }]
classifiers = [
  "Environment :: Console",
  "Framework :: Hatch",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
]
dependencies = []
description = ""
name = "python-uv"
readme = "README.md"
requires-python = ">=3.12,<4.0"
version = "0.0.0-dev"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py311"
fix = true
indent-width = 2
